deployment-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudsample-cip-service
spec:
  type: LoadBalancer
  selector:
    app: cloudsample
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080


#kubectl apply -f cloudsample-cip-service
#kubectl get service cloudsample-cip-service --output yaml
