deployment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudsample-service
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cloudsample
  type: NodePort
