deployment-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloudsample-ingress
spec:
  tls:
  - secretName: sslcerts
  backend:
    serviceName: cloudsample-service 
    servicePort: 8080
